--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   <h1>I'm Isiah Canava.</h1>
 
                   <h3>
-                    I build serverless cloud pipelines and automate security on AWS, ready to take on my first cloud engineering role. <a class="smoothscroll" href="#about">start scrolling</a>
-                   and learn more <a class="smoothscroll" href="#about">about me</a>.
+                    I build serverless cloud pipelines and automate AWS security — ready to bring real-world cloud skills to a high-impact team.
+Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">about me</a>.
                   </h3>
 
                   <div class="s-hero__content-social">
