--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <h1>I'm Isiah Canava.</h1>
 
                   <h3>
-                    I build serverless cloud pipelines and automate AWS security — ready to bring real-world cloud skills to a high-impact team.
+                    I build serverless cloud pipelines and automate AWS security, ready to bring real-world cloud skills to a high-impact team.
 Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">about me</a>.
                   </h3>
 
