--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                   <h3>
                     I build serverless cloud pipelines and automate AWS security, ready to bring real-world cloud skills to a high-impact team.
-Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about"></a>.
+Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about"></a>
                   </h3>
 
                   <div class="s-hero__content-social">
