--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   <h1>I'm Isiah Canava.</h1>
 
                   <h3>
-                    I build serverless cloud pipelines and automate AWS security, ready to bring real-world cloud skills to a high-impact team.
-Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about"></a>
+                    I build serverless cloud pipelines and automate security on AWS, ready to take on my first cloud engineering role. <a class="smoothscroll" href="#about">start scrolling</a>
+                   and learn more <a class="smoothscroll" href="#about"></a>.
                   </h3>
 
                   <div class="s-hero__content-social">
@@ -386,7 +386,7 @@ Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">
         <p>
           Earned in 2024. Foundational certification validating core AWS knowledge.<br>
           <strong>Verified via:</strong><br>
-          <a href="https://www.credly.com/earner/earned/badge/2c34afff-3719-4a42-9e7c-054bb4429e07" target="_blank">
+          <a href="https://www.credly.com/badges/2c34afff-3719-4a42-9e7c-054bb4429e07" target="_blank">
             View on Credly
           </a>
         </p>
@@ -403,7 +403,7 @@ Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">
         <p>
           Earned in 2024. Certification validating foundational IT troubleshooting skills.<br>
           <strong>Verified via:</strong><br>
-          <a href="https://www.credly.com/earner/earned/badge/b4038c04-84bd-44a1-b1d0-146b2de5c949" target="_blank">
+          <a href="https://www.credly.com/badges/b4038c04-84bd-44a1-b1d0-146b2de5c949" target="_blank">
             View on Credly
           </a>
         </p>
@@ -420,7 +420,7 @@ Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">
         <p>
           Earned in 2024. Certification covering network troubleshooting, routing, and infrastructure.<br>
           <strong>Verified via:</strong><br>
-          <a href="https://www.credly.com/earner/earned/badge/7dfb5733-ec53-4c57-b4be-87dc616b6bd6" target="_blank">
+          <a href="https://www.credly.com/badges/382dad00-1bc9-4fb1-aef1-8e62d389de06" target="_blank">
             View on Credly
           </a>
         </p>
@@ -437,7 +437,7 @@ Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">
         <p>
           Earned in 2024. Certification for cybersecurity, threat management, and risk mitigation.<br>
           <strong>Verified via:</strong><br>
-          <a href="https://www.credly.com/earner/earned/badge/d7382787-b04e-4dad-9328-95494d8ba497" target="_blank">
+          <a href="https://www.credly.com/badges/d7382787-b04e-4dad-9328-95494d8ba497" target="_blank">
             View on Credly
           </a>
         </p>
@@ -473,7 +473,7 @@ Start scrolling to see what I’ve built. <a class="smoothscroll" href="#about">
         <p>
           Earned in 2024. Certification validating foundational project management methodologies and coordination.<br>
           <strong>Verified via:</strong><br>
-          <a href="https://www.credly.com/earner/earned/badge/e57b500b-f439-4a1b-a7a7-0ca1a83961ef" target="_blank">
+          <a href="https://www.credly.com/badges/e57b500b-f439-4a1b-a7a7-0ca1a83961ef/public_url" target="_blank">
             View on Credly
           </a>
           
