--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
               <div class="s-hero__content-about">
 
-                  <h1>I'm Isiah Canava.</h1>
+                  <h1>I'm Isiah Canava</h1>
 
                   <h3>
-                    I build serverless cloud pipelines and automate security on AWS, ready to take on my first cloud engineering role. <a class="smoothscroll" href="#about">start scrolling</a>
-                   and learn more <a class="smoothscroll" href="#about"></a>.
+                    I build secure, serverless cloud pipelines and automate threat detection workflows in AWS—ready to take on my first cybersecurity role.  <a class="smoothscroll" href="#about">start scrolling</a>
+                   and learn more<a class="smoothscroll" href="#about"></a>.
                   </h3>
 
                   <div class="s-hero__content-social">
