--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="column large-9 tab-12 s-about__content">
               <h3>About Me</h3>
               <p>
-                I come from an IT background and have been building real-world cybersecurity experience through hands-on projects, SaaS support, and SOC labs. I’ve worked with Python, AWS Lambda, S3, and Athena to simulate detection pipelines and automate cloud-based alerting. I’ve also completed labs focused on SIEM triage, endpoint investigations, and malware analysis. I’m Security+ certified and currently pursuing SOC Analyst roles where I can contribute to threat monitoring, incident response, and continuous security improvement.
+                I come from an IT background and have been building real-world cybersecurity experience through hands-on projects, SaaS support, and SOC labs. I've worked with tools like Python, AWS Lambda, S3, and Athena to simulate detection pipelines and automate cloud-based alerting. I’ve also completed labs on SIEM triage, endpoint investigations, and malware analysis. I'm Security+ certified and currently exploring SOC Analyst roles where I can grow in threat detection, incident response, and security operations.
               </p>
 
               <hr>
