--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <h1>I'm Isiah Canava</h1>
 
                   <h3>
-                    I build secure, serverless cloud pipelines and automate threat detection workflows in AWS—ready to take on my first cybersecurity role.  <a class="smoothscroll" href="#about">start scrolling</a>
+                    I build secure serverless cloud pipelines and automate threat detection workflows in AWS. I am ready to step into my first cybersecurity role.  <a class="smoothscroll" href="#about">start scrolling</a>
                    and learn more<a class="smoothscroll" href="#about"></a>.
                   </h3>
 
